# agents-eval-framework

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: main.py  runtime_api.py
src/core/: config.py  logger.py  middleware.py
src/modules/eval/: public_api.py
src/modules/eval/features/evaluate/: logic.py  router.py  schemas.py
src/scripts/: 01_calibrate_judge.py  02_export_mapped_decisions.py  split_for_gemini.py
tests/: test_health.py
